add devices list

--- a/src/index.html
+++ b/src/index.html
@@ -25,16 +25,20 @@
           <a
             class="nav-link active"
             aria-current="page"
-            href="#"
+            href="/home"
           >Home</a>
           <a
             class="nav-link"
-            href="#"
-          >Features</a>
+            href="/cube"
+          >Cube</a>
+          <a
+          class="nav-link"
+          href="/device-operations"
+        >Devices</a>
           <a
             class="nav-link"
-            href="#"
-          >Contact</a>
+            href="https://github.com/karol-preiskorn/3d-inventory"
+          >GitHub</a>
         </nav>
       </div>
     </header>
@@ -49,8 +53,8 @@
     <footer class="mt-auto text-center text-white-50">
       <p>
         3d-inventory by
-         <a
-          href="https://github.com/karol-preiskorn/Angular-Essentials"
+        <a
+          href="https://github.com/karol-preiskorn/3d-inventory"
           class="text-white"
         >Car10s</a>
       </p>
