--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <base href="/">
   <meta
     name="viewport"
-    content="width=device-width, initial-scale=1"
+    content="width=device-width, initial-scale=1, shrink-to-fit=no"
   >
   <link
     rel="icon"
@@ -16,8 +16,8 @@
   >
 </head>
 
-<body class="d-flex h-100 text-white bg-dark">
-  <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+<body class="d-flex text-white bg-dark">
+  <div class="cover-container d-flex w-100 p-3 mx-auto flex-column">
     <header class="mb-auto">
       <div>
         <h3 class="float-md-start mb-0">3d inventory</h3>
@@ -32,32 +32,58 @@
             href="/cube"
           >Cube</a>
           <a
-          class="nav-link"
-          href="/device-operations"
-        >Devices</a>
+            class="nav-link"
+            href="/device-operations"
+          >Devices</a>
           <a
             class="nav-link"
-            href="https://github.com/karol-preiskorn/3d-inventory"
-          >GitHub</a>
+            href="/device-types"
+          >Device Types</a>
+          <a
+          class="nav-link"
+          href="/device-categories"
+        >Device Categories</a>
         </nav>
       </div>
     </header>
 
     <main class="md-auto">
       <div class="container">
-        <div class="row justify-content-md-center">
-          <app-root></app-root>
-        </div>
+        <app-root></app-root>
+      </div>
     </main>
 
-    <footer class="mt-auto text-center text-white-50">
-      <p>
-        3d-inventory by
-        <a
-          href="https://github.com/karol-preiskorn/3d-inventory"
-          class="text-white"
-        >Car10s</a>
-      </p>
+    <footer
+      class="text-center text-md-start text-white"
+      style="vertical-align: auto;"
+    >
+        <div class="row d-flex align-items-center">
+          <div class="col-md-7 text-center text-md-start">
+            <div class="p-3">
+              © 2023 Copyright:
+              <a
+                class="text-white"
+                href="https://github.com/karol-preiskorn/3d-inventory"
+              >ultimasolution.pl</a>
+            </div>
+          </div>
+          <div class="col-md-5 text-center text-md-end">
+            <a
+              class="btn btn-floating m-1"
+              class="text-white"
+              role="button"
+            >
+              <i class="bi bi-github" style="font-size: 2rem; color: rgb(82, 90, 105);"></i>
+            </a>
+            <a
+              class="btn btn-floating m-1"
+              class="text-white"
+              role="button"
+            >
+              <i class="bi bi-facebook" style="font-size: 2rem; color: cornflowerblue;"></i>
+            </a>
+          </div>
+        </div>
     </footer>
   </div>
 </body>
