--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,7 @@
             <a class="nav-link" href="/device-operations">Devices</a>
             <a class="nav-link" href="/device-types">Device Types</a>
             <a class="nav-link" href="/device-categories">Device Categories</a>
+            <a class="nav-link" href="/device-list">Device list</a>
           </nav>
         </div>
       </header>
