--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
           <a class="nav-link active" aria-current="page" href="/home">Home</a>
           <a class="nav-link" href="/cube">Cube</a>
           <a class="nav-link" href="/devices-list">Devices</a>
-          <a class="nav-link" href="/device-models">Device Models</a>
+          <a class="nav-link" href="/models-list">Models</a>
           <a class="nav-link" href="/device-types">Device Types</a>
           <a class="nav-link" href="/device-categories">Device Categories</a>
         </nav>
