Create crud forms for connection, attributes, attributes-dictionary and floors Fixes #13 working Attribute Dictionary

--- a/src/index.html
+++ b/src/index.html
@@ -22,13 +22,19 @@
           </div>
         </div>
         <div class="col-md-5 text-center text-md-end">
-          <a class="btn btn-floating m-1" class="text-white" role="button">
+          <a class="btn btn-floating m-1" class="text-white" role="button" href="https://github.com/karol-preiskorn/3d-inventory-angular-ui">
             <i
               class="bi bi-github"
               style="font-size: 1.2rem; color: rgb(82, 90, 105)"
             ></i>
           </a>
-          <a class="btn btn-floating m-1" class="text-white" role="button">
+          <a class="btn btn-floating m-1" class="text-white" role="button" href="https://www.ultimasolution.pl/3d-inventory/">
+            <i
+              class="bi bi-wordpress"
+              style="font-size: 1.2em; color: cornflowerblue"
+            ></i>
+          </a>
+          <a class="btn btn-floating m-1" class="text-white" role="button" href="https://www.facebook.com/ultimasolution">
             <i
               class="bi bi-facebook"
               style="font-size: 1.2em; color: cornflowerblue"
