--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
 
-  <body class="d-grid text-white bg-dark">
+  <body class="d-grid">
     <app-root></app-root>
     <footer class="text-white" style="vertical-align: auto">
       <div class="row d-flex align-items-center">
